--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,52 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
-    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <style>
+    body {
+      font-size: 13px; 
+      padding: 10px;
+    }
+    ul {
+      padding-left: 1rem;
+    }
+    #result .label { 
+      display: block; 
+      padding-bottom: 4px; 
+      font-weight: bold; 
+      margin-right: 10px;
+    }
+    #result .message { 
+      display: block; 
+      white-space: pre-wrap; 
+      padding-bottom: 4px; 
+      font-size: 9px; 
+      border: solid 1px #ccc; 
+      padding: 10px;
+    }
+    </style>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Folder View - Phone</h1>
     <!-- All of the Node.js APIs are available in this renderer process. -->
     We are using Node.js <script>document.write(process.versions.node)</script>,
     Chromium <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
 
+    <h2>List My Storage</h2>
+    <div id="tree">Loading...</div>
+
+    <h2>More Information</h2>
+    <ol id="result"></ol>
+
     <script>
-      // You can also require other files to run in this process
       require('./renderer.js')
+      const $ = require('jquery');
+      $('#tree').on('click', 'li', (e) => {
+        e.stopPropagation();
+        const target = e.currentTarget;
+        $(target).children('ul').toggle();
+      });
     </script>
   </body>
 </html>
